# ReLUQPcpp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile126  README.md  RHC_controllers.py  atlas_dynamics.npz  atlas_stabilization.py  barplot.py  barplot_atlas.py  constant_rho.py  double_integrator.py  gpusolver.pyx  linalg.cu  linalg.hpp  quadrotor_stabilization.py  random_qps.py  reluqp.py  script.py  setup.py  solver.cu  solver.hpp  solver_wrapper.pyx  utils.py
examples/: RHC_controllers.py  atlas_stabilization.py  barplot_atlas.py  barplot_quadrotor.py  double_integrator.py  quadrotor_stabilization.py  random_qps.py
results/: quadrotor_solve_times.txt
